--- a/package.json
+++ b/package.json
@@ -1,57 +1,60 @@
 {
   "name": "vite-plugin-layout",
   "private": "false",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "LICENSE"
   ],
   "exports": {
     ".": "./dist/index.js"
   },
   "scripts": {
     "build": "tsup",
-    "dev": "tsup --watch"
+    "dev": "tsup --watch",
+    "prepublishOnly": "npm run build"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "homepage": "https://lionsserver.hu",
+  "bugs": {
+    "email": "vite-plugin-layout@lionsserver.hu",
+    "url": "https://lionsserver.hu"
   },
   "keywords": [
     "vite",
-    "vite-plugin",
-    "vite-layout",
-    "vite-plugin-layout",
     "react",
-    "react-layout",
-    "html",
-    "html-layout",
     "layout",
-    "file-based",
-    "file-based-layout",
-    "file-system",
-    "file-system-routing",
-    "meta",
-    "meta-tags",
-    "seo",
-    "head",
-    "head-manager",
-    "ssr",
-    "ssg",
-    "static-site",
-    "static-site-generator",
-    "frontend",
-    "web",
-    "web-development"
+    "plugin"
   ],
   "description": "File-based HTML layout system for Vite + React. Define global, parent and per-page layouts using simple TypeScript files, and dynamically inject meta tags, scripts and markup into your HTML at build and dev time.",
   "author": "tothattila05",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tothattila05/vite-plugin-layout"
+  },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "@types/node": "^25.0.9",
+    "esbuild": "^0.27.2",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "jiti": "^2.6.1",
+    "prettier": "^3.8.0",
     "tsup": "^8.5.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.53.1",
+    "vite": "^7.3.1"
   },
   "peerDependencies": {
-    "vite": "^7",
-    "react": "^18 || ^19"
+    "esbuild": ">=0.18.0",
+    "react": "^18 || ^19",
+    "vite": "^7"
   }
 }
