--- a/package.json
+++ b/package.json
@@ -1,43 +1,30 @@
 {
-  "name": "vite-plugin-layout",
-  "private": "false",
+  "name": "@tothattila05/vite-plugin-layout",
+  "private": false,
   "version": "0.0.1",
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist",
     "README.md",
     "LICENSE"
   ],
   "exports": {
-    ".": "./dist/index.js"
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    }
   },
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "prepublishOnly": "npm run build"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "homepage": "https://lionsserver.hu",
-  "bugs": {
-    "email": "vite-plugin-layout@lionsserver.hu",
-    "url": "https://lionsserver.hu"
-  },
-  "keywords": [
-    "vite",
-    "react",
-    "layout",
-    "plugin"
-  ],
-  "description": "File-based HTML layout system for Vite + React. Define global, parent and per-page layouts using simple TypeScript files, and dynamically inject meta tags, scripts and markup into your HTML at build and dev time.",
-  "author": "tothattila05",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/tothattila05/vite-plugin-layout"
+    "prepublishOnly": "npm run build",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prettier": "prettier --write ."
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -45,6 +32,7 @@
     "esbuild": "^0.27.2",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
+    "globals": "^17.0.0",
     "jiti": "^2.6.1",
     "prettier": "^3.8.0",
     "tsup": "^8.5.1",
@@ -54,7 +42,28 @@
   },
   "peerDependencies": {
     "esbuild": ">=0.18.0",
-    "react": "^18 || ^19",
-    "vite": "^7"
-  }
+    "react": "^18.0.0 || ^19.0.0",
+    "vite": "^6.0.0 || ^7.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "author": "tothattila05",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tothattila05/vite-plugin-layout"
+  },
+  "homepage": "https://vpl.tothattila05.hu/",
+  "bugs": {
+    "email": "report@vpl.tothattila05.hu",
+    "url": "https://vpl.tothattila05.hu/"
+  },
+  "keywords": [
+    "vite",
+    "react",
+    "layout",
+    "plugin"
+  ],
+  "description": "File-based HTML layout system for Vite + React. Define global, parent and per-page layouts using simple TypeScript files, and dynamically inject meta tags, scripts and markup into your HTML at build and dev time."
 }
